--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -50,4 +50,6 @@ r.AllowGlobalClipPlane=True
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.PhysicsSettings]
+BounceThresholdVelocity=200.000000
 
