ALPHA v0.9 -	Fully modelled, UV unwrapped, and textured SM_Stairlift.
-	Added BP_Stairlift
--  	Stairlift follows the BP_StairliftRail spline for travelling up and down the staircase.
--  	At the end of the journey, the stairlift ejects the player, teleporting them outside of the stairlift.

-	Added BP_CameraTarget
--  	This is currently only used for transitioning the camera from the character to the stairlift. (However, this should also be used for the wheelie bin too. Finally, the wheelie bin will have collisions!)
--  	A function to transition between targets is available in BP_PlayerCharacter.

-	Added BP_SeylorFuncs
--  	Adds the ‘Add Transform (No Scale)’ function. This is used in BP_Stairlift for the teleport targets and in BP_CameraTarget.

-	Made changes to the level blueprint for ‘L_MainLevel’
    The intention for this blueprint is to add the functionality to the tasks handled by BP_Gamemode. The idea is that if this project were to continue on in the future, the tasks system managed by BP_Gamemode would become more dynamic, almost like a registry. Then, these tasks can be handled on a per level basis.
--  	Added ‘Begin’ and ‘Tick’ events for every task. These are only called if the task is active and stop being called once this is no longer the case.
--  	Once the clothes task is active, the ‘BlurCube’ which blocks access to the stairlift is hidden.

-	Made changes to ‘BP_Gamemode’
--  	Added ‘GetCurrentTask’ which returns the current active task as a BPenum_StickyNoteTasks enumerator.
--  	Added the ‘TaskUpdateFlag’ boolean. In the SetCurrentTask function, this is set to true. This is to allow the Begin event to be called once, despite it being called within an update loop.

-	Added translucent blind, unlit windowpane (yes, it is spelt like that unfortunately), and static rect light for every window frame inside the house. Looks so much more natural, and also makes the scene feel more claustrophobic which is the intention. Also means I do not have to s

--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@ DerivedDataCache/*
 #Blender Back-up Files
 *.blend1
 
-#Substance Files (Too large)
+#Substance Files (Unfortunately, they're too large! ._. )
 *.spp.painter_lock
 *.spp
 
