--- a/.gitattributes
+++ b/.gitattributes
@@ -16,5 +16,6 @@
 *.hdr filter=lfs diff=lfs merge=lfs -text
 .mb filter=lfs diff=lfs merge=lfs -text
 
-#Git LFS *EVERYTHING* in the '_RawAssets' folder.
+#Git LFS *EVERYTHING* in the underscore folders.
 /_RawAssets/**/* filter=lfs diff=lfs merge=lfs -text
+/_Misc/**/* filter=lfs diff=lfs merge=lfs -text
