ALPHA v0.12b -	Expanded barn; added hill.
-	Removed old portal code.

-	Added BP_Painting
    Can be thought of as a security camera screen. However, as the paintings are of other levels that are loaded in and out as needed,
    I have had to add a Game Instance blueprint to transport the necessary references across levels.  This painting blueprint handles BP_PaintingTargets as well as painting level streaming.
--	Loads for 0.01s at the start of the game to get a capture of the streamed level before closing it again.
--	Upon activation, loads the scene and obtains a continuous capture without closing. Triggers BP_PaintingTarget spline and teleports the player to the final destination.

-	Added BP_PaintingTarget
--	CameraMotionSpline, for the transition camera animation.
--	SplineData, an array of BPstruct_PaintingTargetData that helps with determining the camera rotation.
--	SpawnPoint, an arrow which contains the transform where the player should be teleported to.

-	Added BP_GameInstance
--	Added functions to keep track of the active painting.

-	Deprecated ‘UpdateCamera’ in BP_PlayerCharacter
--	The function can now be accessed in BP_PlayerController.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 EditorStartupMap=/Game/Levels/L_MainLevel.L_MainLevel
 GameDefaultMap=/Game/Levels/L_MainLevel.L_MainLevel
 GlobalDefaultGameMode=/Game/Blueprints/BP_Gamemode.BP_Gamemode_C
+GameInstanceClass=/Game/Blueprints/Game/BP_GameInstance.BP_GameInstance_C
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/AlzheimersProject")
@@ -52,4 +53,3 @@ r.AllowGlobalClipPlane=True
 
 [/Script/Engine.PhysicsSettings]
 BounceThresholdVelocity=200.000000
-
