ALPHA v0.16 Made changes based on feedback.
-	Made the interactable area of the door larger. Should now be slightly less finicky to open.

-	Altered some of the clues for the Medicine task as to make the connection of the quote easier to understand between the newspaper and the leaflet.

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ Plugins/*/Binaries/*
 Build/*
 ExeBuild/*
 
+# Packages
+_Package/*
+
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !Build/*/
 Build/*/**
