ALPHA v0.16b - Put the correct update on the start screen.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,7 +5,7 @@ ProjectID=DAF0035E4E1A6A7C0B078AB5BC3C8A14
 CopyrightNotice=
 bAllowWindowResize=False
 bAllowMaximize=False
-ProjectVersion=0.15
+ProjectVersion=0.16b
 ProjectName=Exploring Alzheimer's
 bUseBorderlessWindow=True
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "616BA6FA450E530B0A1201A909B15667", "Exploring Alzheimer\'s")
